--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-    
+    <section>
+        <div class="img">
+            <img src="./img/image 2.png" alt="imagem do sofá">
+        </div>
+        <div class="info">
+            <p>CÓDIGO: 42404</p>
+            <h1>Sofá Margot II - Rosé</h1>
+            <p>R$ 4.000 </p>
+            <button class="btn">ADICIONAR À CESTA</button>
+        </div>
+    </section>
 </body>
 
 </html>
